--- a/projects/vs2019/agdll.vcxproj.filters
+++ b/projects/vs2019/agdll.vcxproj.filters
@@ -438,6 +438,9 @@
     <ClCompile Include="..\..\dlls\agflood.cpp">
       <Filter>Source Files\dlls</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\dlls\genericitem.cpp">
+      <Filter>Source Files\dlls</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\dlls\doors.h">
