--- a/linux/Makefile.agdll
+++ b/linux/Makefile.agdll
@@ -158,7 +158,8 @@ HLDLL_OBJS = \
 	$(HLDLL_OBJ_DIR)/aglms.o \
 	$(HLDLL_OBJ_DIR)/agdom.o \
 	$(HLDLL_OBJ_DIR)/spawnchooser.o \
-	$(HLDLL_OBJ_DIR)/agflood.o
+	$(HLDLL_OBJ_DIR)/agflood.o \
+	$(HLDLL_OBJ_DIR)/genericitem.o
 
 HLWPN_OBJS = \
 	$(HLWPN_OBJ_DIR)/hl_wpn_glock.o
@@ -187,7 +188,7 @@ dirs:
 $(MODNAME).$(SHLIBEXT): $(HLDLL_OBJS) $(HLWPN_OBJS) $(PM_OBJS) $(GAME_SHARED_OBJS) $(MINISTL_OBJS)
 	$(CC) $(LDFLAGS) $(SHLIBLDFLAGS) -o $(BUILD_DIR)/$@ $(HLDLL_OBJS) $(HLWPN_OBJS) $(PM_OBJS) $(GAME_SHARED_OBJS)
 	./gendbg.sh $(BUILD_DIR)/$(MODNAME).$(SHLIBEXT)
-	
+
 $(HLWPN_OBJ_DIR)/%.o : $(HLWPN_SRC_DIR)/%.cpp
 	$(DO_HLWPN_CC)
 
