Added item_generic for Opposing Force

--- a/projects/vs2019/agdll.vcxproj
+++ b/projects/vs2019/agdll.vcxproj
@@ -257,6 +257,7 @@
     <ClCompile Include="..\..\dlls\agflood.cpp" />
     <ClCompile Include="..\..\dlls\cvar.cpp" />
     <ClCompile Include="..\..\dlls\agrandom.cpp" />
+    <ClCompile Include="..\..\dlls\genericitem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\const.h" />
