--- a/projects/vs2019/agdll.vcxproj.filters
+++ b/projects/vs2019/agdll.vcxproj.filters
@@ -447,6 +447,9 @@
     <ClCompile Include="..\..\dlls\speedrunstats.cpp">
       <Filter>Source Files\dlls</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\dlls\genericitem.cpp">
+      <Filter>Source Files\dlls</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\dlls\doors.h">
