--- a/linux/Makefile.agdll
+++ b/linux/Makefile.agdll
@@ -161,7 +161,8 @@ HLDLL_OBJS = \
 	$(HLDLL_OBJ_DIR)/agflood.o \
 	$(HLDLL_OBJ_DIR)/cvar.o \
 	$(HLDLL_OBJ_DIR)/agrandom.o \
-	$(HLDLL_OBJ_DIR)/speedrunstats.o
+	$(HLDLL_OBJ_DIR)/speedrunstats.o \
+	$(HLDLL_OBJ_DIR)/genericitem.o
 
 HLWPN_OBJS = \
 	$(HLWPN_OBJ_DIR)/hl_wpn_glock.o
@@ -190,7 +191,7 @@ dirs:
 $(MODNAME).$(SHLIBEXT): $(HLDLL_OBJS) $(HLWPN_OBJS) $(PM_OBJS) $(GAME_SHARED_OBJS) $(MINISTL_OBJS)
 	$(CC) $(LDFLAGS) $(SHLIBLDFLAGS) -o $(BUILD_DIR)/$@ $(HLDLL_OBJS) $(HLWPN_OBJS) $(PM_OBJS) $(GAME_SHARED_OBJS)
 	./gendbg.sh $(BUILD_DIR)/$(MODNAME).$(SHLIBEXT)
-	
+
 $(HLWPN_OBJ_DIR)/%.o : $(HLWPN_SRC_DIR)/%.cpp
 	$(DO_HLWPN_CC)
 
